--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,8 @@
-<h1 [ngClass]="{
-    gray: h1Style,
-    large: h1Style
-}">Home</h1>
-<button (click)="firstClick()">Click Me</button>
+<h1>Users</h1>
+
+<ul *ngIf="users">
+  <li *ngFor="let user of users">
+    <img *ngIf="user.avatar" [src]="user.avatar">
+    <p>{{ user.first_name }} {{ user.last_name }}</p>
+  </li>
+</ul>
