--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,12 +1,23 @@
-<header>
-    <div class="container">
-        <a routerLink="#" class="logo">{{apptitle}}</a>
-        <nav>
-            <ul>
-                <li><a routerLink="#">home</a></li>
-                <li><a routerLink="about">about</a></li>
-                <li><a routerLink="contact">contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="navbar-brand me-auto" href="/">{{apptitle}}</a>
+          </li>
+      </ul>
+  </div>
+  <div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+  </div>
+  <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+      <ul class="navbar-nav ml-auto">
+
+        <li class="nav-item active"><a class="nav-link" routerLink="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/contact">Contact us</a></li>
+      </ul>
+  </div>
+</nav>
