--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,30 +1,36 @@
-header {
-    background: #7700FF;
+// header {
+//     background: #7700FF;
 
-    .logo {
-        font-weight: bold;
-    }
+//     .logo {
+//         font-weight: bold;
+//     }
 
-    nav {
-        justify-self: right;
-    
-        ul {
-            list-style-type: none;
-            margin: 0; padding: 0;
+//     nav {
+//         justify-self: right;
 
-            li {
-                float: left;
+//         ul {
+//             list-style-type: none;
+//             margin: 0; padding: 0;
 
-                a {
-                    padding: 1.5em;
-                    text-transform: uppercase;
-                    font-size: .8em;
+//             li {
+//                 float: left;
 
-                    &:hover {
-                        background: #8E2BFF;
-                    }
-                }
-            }
-        }
-    }
-}
+//                 a {
+//                     padding: 1.5em;
+//                     text-transform: uppercase;
+//                     font-size: .8em;
+
+//                     &:hover {
+//                         background: #8E2BFF;
+//                     }
+//                 }
+//             }
+//         }
+
+//     }
+// }
+
+
+.navbar {
+    background-color: #eeeeee !important;
+  }
